# dot

./: .dependencies.yml  .envrc  .gitignore  .gitmodules  .python-version  .tmux.conf.local  .zshrc  CONTRIBUTING.md  Makefile  NOTES.md  README.md  bootstrap.sh  index.js  package-lock.json  package.json  requirements.txt  zshrc
.sbom-tool/: sbom-cyclonedx-2026-05-07T23-48-17-989Z.json  sbom-raw-2026-05-07T23-48-17-989Z.json  sbom-report-2026-05-07T23-48-17-989Z.html
.zombie/: README.md
config/: README.md  bashrc  data.json  data.yaml  iterm2.json  iterm2.plist  shell.yaml  zshrc
data/: Brewfile  Brewfile.arm64  Brewfile.cask  README.md  quotes.json  quotes.yaml  secrets.md  zplugins.json  zsh.json  zsh.json.orig  zsh.yaml
turtle/: .gitignore  Cargo.toml  README.md  _builtin.rs  _defaults.rs  _execution.rs  _history.rs  _types.rs  builtin.rs  builtins.rs  config.rs  configuration.rs  constants.rs  context.rs  defaults.rs  execution.rs  expressions.rs  history.rs  input.rs  interpreter.rs  lang.rs  lib.rs  main.rs  prompt.rs  rustfmt.toml  shell.rs  style.rs  terminal.rs  themes.rs  tokens.rs  turtle.rs  types.rs  utils.rs  widgets.rs
turtle/_old/: _input.rs  _interpreter.rs  _main.rs  _shell.rs  _widgets.rs
turtle/ai/: nn.rs  types.rs
turtle/ai/integrations/openai/: mod.rs
turtle/ai/layers/: mod.rs
turtle/data/: themes.yaml
turtle/docs/: CONFIGURE.md  CONTRIBUTE.md  SHELLS.md  TODO.md  TURTLE.md
turtle/docs/examples/: config.yaml
turtle/scripts/: format.sh
turtle/scripts/lib/: main.sh
turtle/tests/: fixtures.rs  int.rs  integration.rs
(+221 files in other folders)
