[package]
name = "turtle"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { "version" = "4.5.49", features=["derive"]}
dirs = "6.0.0"
regex = "1.12.2"
rustyline = "17.0.2"
serde = { "version" = "1.0.228", features=["derive"]}
serde_json = "1.0.145"
uuid = { "version" = "1.18.1", features=["v4", "v7"]}
whoami = "1.6.1"

[[bin]]
name = "turtle"
path = "main.rs"
