[package]
name = "turtle"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
clap = { "version" = "4.5.49", features=["derive"]}
crossterm = "0.29.0"
csv = "1.4.0"
dirs = "6.0.0"
fallible = "0.1.3"
git-version = "0.3.9"
is_executable = "1.0.5"
ndarray = "0.16.1"
notify = "8.2.0"
once_cell = "1.21.3"
rand = "0.9.2"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
regex = "1.12.2"
rustyline = "17.0.2"
serde = { "version" = "1.0.228", features=["derive"]}
serde_json = "1.0.145"
serde_yaml = "0.9.34"
shlex = "1.3.0"
tinytemplate = "1.2.1"
tokio = { "version" = "1.48.0", features = ["full"]}
users = "0.11.0"
uuid = { "version" = "1.18.1", features=["v4", "v7"]}
whoami = "1.6.1"

[lib]
name = "turtle"
path = "lib.rs"

[[bin]]
name = "turtle"
path = "main.rs"
